# powershell-terminal-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.ps1  claude_desktop_config_example.json  config.yaml  db-admin.ps1  db_admin.py  pyproject.toml  requirements.txt  run_web.py  server.json  setup_venv.ps1
docs/: INTERACTIVE-INPUT.md  SPEC.md
scripts/: read_db.py  test_mcp_dispatch.py  test_pwsh_session.py  test_session_output.py
src/: __init__.py  __main__.py  completion_token.py  db.py  mcp_server.py  shared_state.py  state_history.py  tool_schemas.py  web_replay.py
src/config/: __init__.py  config_dataclasses.py  config_init.py  config_loader.py
src/output/: __init__.py  output_buffer.py  output_buffer_base.py  output_filter.py  output_filter_commands.py  output_filter_decision.py
src/pwsh/: __init__.py  output_clean.py  pwsh_interactive.py  pwsh_io.py  pwsh_launch.py  pwsh_reader.py  pwsh_session.py  session_output.py
src/static/: terminal.css  terminal.js
src/utils/: __init__.py  utils.py  utils_format.py  utils_output.py  utils_text.py
src/web/: web_terminal.py  web_terminal_ui.py  web_terminal_websocket.py
